        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.7-sun3
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Frequency  : always with o2ib 1.3 and sles10
Bugzilla   : 15870
Description: fix build with SLES10 and o2ib v3.
Details    : sles10 uses diffrent name for Module.symver file but configure
             assume this file has same name on RHEL/SLES/vanila kernels.

Severity   : normal
Bugzilla   : 14835
Frequency  : after recovery
Description: precreate to many object's after del orphan.
Details    : del orphan st in oscc last_id == next_id and this triger growing
             count of precreated objects. Set flag LOW to skip increase count
             of precreated objects.

Severity   : normal
Bugzilla   : 15139
Frequency  : rare, on clear nid stats
Description: ASSERTION(client_stat->nid_exp_ref_count == 0)
Details    : when clean nid stats sometimes try destroy live entry,
             and this produce panic in free.

Severity   : major
Bugzilla   : 15575
Description: Stack overflow during MDS log replay
 ease stack pressure by using a thread dealing llog_process.

Severity   : normal
Bugzilla   : 15443
Description: wait until IO finished before start new when do lock cancel.
Details    : VM protocol want old IO finished before start new, in this case
             need wait until PG_writeback is cleared until check dirty flag and
             call writepages in lock cancel callback.

Severity   : enhancement
Bugzilla   : 14929
Description: using special macro for print time and cleanup in includes.

Severity   : normal
Bugzilla   : 12888
Description: mds_mfd_close() ASSERTION(rc == 0) 
Details    : In mds_mfd_close(), we need protect inode's writecount change 