@@ -12,6 +12,13 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : major
+Bugzilla   : 14134
+Description: enable MGS and MDT services start separately
+Details    : add a 'nomgs' option in mount.lustre to enable start a MDT with
+             a co-located MGS without starting the MGS, which is a complement
+             to 'nosvc' mount option.
+
 Severity   : normal
 Frequency  : always with o2ib 1.3 and sles10
 Bugzilla   : 15870
